####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.1.0rc2
############

API Changes
***********

* The new ``merge_file_content`` hook point has been altered to provide a
  better API where state for extensions can be stored rather than the
  too-simple function based approach. This fixes a performance regression
  where branch configuration would be parsed per-file during merge.
  (Robert Collins, John Arbash Meinel, #513822)

bzr 2.1.0rc1
############

:Codename: the 'new' stable
:2.1.0rc1: 2009-01-21

This is the first stable release candidate for Bazaar's 2.1 series. From
this point onwards, the 2.1 series will be considered stable (as the 2.0
series) and only bugfixes are expected to be incorporated. The dozen or so
bugfixes in the 2.0.4 release are also included in this release (along
with more than 15 more bugfixes). Some of the interesting features are
support for per-file merge hooks, ``bzr unshelve --preview``, support
for using ! in ignore files to exclude files from being ignored, a small
memory leak was squashed, and many ``ObjectNotLocked`` errors were fixed.
This looks to be a very good start for a new stable series.


New Features
************

* Add bug information to log output when available.
  (Neil Martinsen-Burrell, Guillermo Gonzalez, #251729)

* Added ``merge_file_content`` hook point to ``Merger``, allowing plugins
  to register custom merge logic, e.g. to provide smarter merging for
  particular files.

* Bazaar now includes the ``news_merge`` plugin.  It is disabled by
  default, to enable it add a ``news_merge_files`` option to your
  configuration.  Consult ``bzr help news_merge`` for more information.
  (Andrew Bennetts)
  
* ``bzr branch`` now takes a ``--bind`` option. This lets you
  branch and bind all in one command. (Ian Clatworthy)

* ``bzr switch`` now takes a ``--revision`` option, to allow switching to
  a specific revision of a branch. (Daniel Watkins, #183559)
