@@ -14,7 +14,9 @@ API Changes
 * The new ``merge_file_content`` hook point has been altered to provide a
   better API where state for extensions can be stored rather than the
   too-simple function based approach. This fixes a performance regression
-  where branch configuration would be parsed per-file during merge.
+  where branch configuration would be parsed per-file during merge. As
+  part of this the included news_merger has been refactored into a base
+  helper class ``bzrlib.merge.ConfigurableFileMerger``.
   (Robert Collins, John Arbash Meinel, #513822)
 
 bzr 2.1.0rc1
